--- a/iis/index.html
+++ b/iis/index.html
@@ -15,6 +15,7 @@
     <p>Headings define the outline of your site. There are six levels of headings.</p>
 
     <!-- LISTS -->
+    <!-- Unordered lists -->
     <h2>Lists</h2>
     <p>This is how you make an unordered list:</p>
     <ul>
@@ -22,5 +23,15 @@
         <li>Add each item in its own "li" element</li>
         <li>They don't need to be in any particular order</li>
     </ul>
+
+    <!-- Ordered lists -->
+    <p>This is what an ordered list looks like:</p>
+
+    <ol>
+        <li>Notice the new "ol" element wrapping everything</li>
+        <li>But, the list item elements are the same</li>
+        <li>Also note how the numbers increment on their own</li>
+        <li>You should be noticing things is this precise order, because this is an ordered list</li>
+    </ol>
 </body>
 </html>
