--- a/iis/index.html
+++ b/iis/index.html
@@ -33,5 +33,14 @@
         <li>Also note how the numbers increment on their own</li>
         <li>You should be noticing things is this precise order, because this is an ordered list</li>
     </ol>
+
+    <!-- Inline elements -->
+    <h2>Inline elements</h2>
+    <!-- Emphasis (italic) -->
+    <p><em>Sometimes</em>, you need to draw attention to a particular word or phrase.</p>
+
+    <!-- Strong (bold) -->
+    <p>Other times you need to <strong>strong</strong>ly emphasize the importance of a word or phrase.</p>
+    <p><em><strong>And sometimes you need to shout!</strong></em></p>
 </body>
 </html>
