--- a/iis/basics.html
+++ b/iis/basics.html
@@ -42,5 +42,13 @@
     <!-- Strong (bold) -->
     <p>Other times you need to <strong>strong</strong>ly emphasize the importance of a word or phrase.</p>
     <p><em><strong>And sometimes you need to shout!</strong></em></p>
+
+    <!-- Empty elements -->
+    <h2>Empty elements</h2>
+    <p>This paragraph needs some space below it...</p>
+    <br><br><br><br><br><br><br><br>
+    <p>So, I added some hard line breaks.</p>
+    <hr>
+    <p>P.S This page might look like crap, but we'll learn how to fix that with some CSS soon.</p>
 </body>
 </html>
