--- a/iis/css-selectors/selectors.html
+++ b/iis/css-selectors/selectors.html
@@ -20,6 +20,8 @@
         style.</p>
 
         <div class="button">Button One</div>
+        <div class="button call-to-action">Button Two</div>
+
     </div>
   </body>
 </html>
